--- a/style.css
+++ b/style.css
@@ -134,3 +134,19 @@ a:hover {
 .hamburger-icon span:last-child {
   transform: none;
 } */
+
+/* SECTIONS */
+
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
+
+.section-container {
+  display: flex;
+}
+
+/* PROFILE SECTION */
