--- a/style.css
+++ b/style.css
@@ -301,3 +301,65 @@ section {
   width: 400px;
   margin:auto 0;
 }
+
+#experience{
+  position: relative;
+}
+
+.experience-sub-title{
+  color:rgb(85, 85, 85);
+  font-weight:600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container{
+  display: flex;
+  justify-content: center;
+  flex-direction:column;
+}
+
+.article-container{
+  display:flex;
+  text-align: inherit;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap:2.5rem;
+  justify-content: space-around;
+}
+
+article{
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap:0.5rem;
+}
+
+article .icon{
+  cursor: default;
+}
+
+#projects{
+  position: relative;
+}
+
+.color-container{
+  border-color:rgb(163,163,163);
+  background: rgb(250,250,250);
+}
+
+.project-img{
+  border-radius: 2rem;
+  width:90%;
+}
+
+.project-title{
+  margin:1rem;
+  color:black;
+
+}
+
+.project-btn{
+  color:black;
+  border-color: rgb(163,163,163);
+}
